# Master2Labs

datamining/: Controller.java  DataSet.java  Main.java  dataSet.java  main.java  sample.fxml
nlp/: corpus.txt  lab1.py  lab2.py  lab2.py.save  lab3.py  lab4.py  lab5.py
nlp/notebooks/: lab4.ipynb  lab5.ipynb
prolog/: lab1.pl  lab2.pl  lab2.py  pqr2.pl
ri/: D1.txt  D2.txt  D3.txt  D4.txt  lab1.py
ri/LabProject/: helpers.py  indexation.py  main.py  stopWords.txt
vision/: CMakeLists.txt  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  sourceCodeLink.txt
